color improvements but not quite there yet

--- a/style.css
+++ b/style.css
@@ -3,7 +3,10 @@
 body {
     margin:0;
     padding-top:20px;
-    background-color: #3c4350;
+    background: #2980B9;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to top, #FFFFFF, #6DD5FA, #2980B9);  
+    background: linear-gradient(to top, #FFFFFF, #6DD5FA, #2980B9); 
+    min-height: 2000px;   
 }
 
 h1 {
@@ -26,7 +29,7 @@ h1 {
 
 #skip {
     text-align: center;
-    background-color: #3c4350;
+    background-color: transparent;
     color:white;
     border: none;
     font-family: 'Exo 2', sans-serif;
@@ -44,3 +47,20 @@ h1 {
     text-align: center;
     margin: 0 auto;
 }
+
+/* colors reference 
+
+nice blue gradient
+background: -webkit-linear-gradient(to top, #FFFFFF, #6DD5FA, #2980B9);  
+background: linear-gradient(to top, #FFFFFF, #6DD5FA, #2980B9); 
+
+land brown #C7B34C
+
+boder brown
+
+correct green: #24D131
+
+wrong red: #C74922
+
+
+*/
