--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@100;300;500&family=Source+Serif+4&display=swap');
 
+/* html {
+    height: 100%;
+} */
+
 body {
     margin:0;
     padding-top:20px;
     background: #2980B9;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to top, #FFFFFF, #6DD5FA, #2980B9);  
-    background: linear-gradient(to top, #FFFFFF, #6DD5FA, #2980B9); 
-    min-height: 2000px;   
+    background: -webkit-linear-gradient(to top, #c3efff, #2980B9, #2171a7);  
+    background: linear-gradient(to top, #c3efff, #2980B9, #2171a7); 
+    height: 1100px;
 }
 
 h1 {
