--- a/style.css
+++ b/style.css
@@ -1,24 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@100;300;500&family=Source+Serif+4&display=swap');
 
 body {
-    margin:0;
-    padding-top:20px;
-    background: #2980B9;  /* fallback for old browsers */
+    /* background: #2980B9;  
     background: -webkit-linear-gradient(to top, #c3efff, #2980B9, #2171a7);  
     background: linear-gradient(to top, #c3efff, #2980B9, #2171a7); 
-}
-
-h1 {
-    font-family: 'Exo 2', sans-serif;
     color:white;
     text-align: center;
+    font-family: 'Exo 2', sans-serif; */
+}
+
+.click-wrap {
+    font-size:24px;
 }
 
 .click-prompt {
-    color:white;
-    text-align: center;
-    font-family: 'Exo 2', sans-serif;
-    font-size: 24px;
     font-weight: 100;
 }
 
@@ -39,10 +34,4 @@ h1 {
 
 #skip:hover {
     text-decoration: underline;
-}
-
-#skip-wrap {
-    width: 80px;
-    text-align: center;
-    margin: 0 auto;
 }
