deploy this fro mobile tesdt

--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@100;300;500&family=Source+Serif+4&display=swap');
 
 body {
-    /* background: #2980B9;  
+    background: #2980B9;  
     background: -webkit-linear-gradient(to top, #c3efff, #2980B9, #2171a7);  
     background: linear-gradient(to top, #c3efff, #2980B9, #2171a7); 
     color:white;
     text-align: center;
-    font-family: 'Exo 2', sans-serif; */
+    font-family: 'Exo 2', sans-serif;
 }
 
 .click-wrap {
