--- a/style.css
+++ b/style.css
@@ -10,8 +10,13 @@ body {
     min-height: 100vh;
 }
 
+.game {
+    padding-top:40px;
+}
+
 .click-wrap {
-    font-size:24px;
+    font-size:20px;
+    line-height: 1.8;
 }
 
 .click-prompt {
@@ -25,7 +30,7 @@ body {
 #skip {
     text-align: center;
     background-color: transparent;
-    color:white;
+    color:rgb(174, 179, 184);
     border: none;
     font-family: 'Exo 2', sans-serif;
     font-weight: 100;
@@ -35,4 +40,8 @@ body {
 
 #skip:hover {
     text-decoration: underline;
+}
+
+.grayer {
+    color:rgb(174, 179, 184);
 }
